--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,26 @@
 <resources>
-    <string name="app_name">萌比</string>
+    <string name="app_name"></string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment"></string>
+    <!--登录 -->
+    <string name="user_longin_textview">登录</string>
+    <string name="user_register_textview">注册</string>
+    <string name="user_longin_button">登录</string>
+    <!--登录 edittext默认提示-->
+    <string name="user_phone_editetxt">请输入您的手机号</string>
+    <string name="user_password_editetxt">请输入密码</string>
+    <!--登录 第三方-->
+    <string name="user_other_textview">其他登录方式</string>
+
+    <!--注册-->
+    <string name="register_textview">注册</string>
+    <string name="register_login_textview">登录</string>
+    <string name="register_phone_editetxt">请输入您的手机号</string>
+    <string name="register_identifying_code_editext">请输入验证码</string>
+    <string name="register_password_editetxt">请输入密码</string>
+    <string name="register_identifying_code_button">获取验证码</string>
+    <string name="register_agree_textview">我已阅读并同意</string>
+    <string name="register_service_agreement_textview">《用户服务协议》</string>
+    <string name="register_agreement_button">同意协议并注册</string>
 </resources>
