--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,34 +70,7 @@
     <string name="user_info_photo">拍照</string>
     <string name="user_info_album">从手机相册选择</string>
     <string name="user_info_cancel">取消</string>
-    <string name="user_info_nickname_hint">请输入您的昵称</string>
-    <string name="user_info_nickname_length">昵称长度有限制20个字符</string>
-    <string name="user_info_sex_m">男</string>
-    <string name="user_info_sex_w">女</string>
-    <!--设置-->
-    <string name="user_settings_feed_back">意见反馈</string>
-    <string name="user_settings_custom_service">客服中心</string>
-    <string name="user_settings_about">关于我们</string>
-    <string name="user_settings_version_update">版本更新</string>
-    <string name="user_settings_exit_login">退出登录</string>
-    <!--意见反馈-->
-    <string name="user_feed_back_content">想要新功能？使用不方便？这里吐槽吧！</string>
-    <string name="user_feed_back_qq">联系QQ</string>
-    <string name="user_feed_back_email">邮箱</string>
-    <string name="user_feed_back_submit">提交</string>
-    <!--客服中心-->
-    <string name="user_custom_fficial_service">官方客服</string>
-    <string name="user_custom_fficial_service_qq">QQ:</string>
-    <string name="user_custom_guild_entered">公会入驻</string>
-    <string name="user_custom_guild_entered_qq">QQ:</string>
-    <!--充值-->
-    <string name="recharge_account_number">充值账号：</string>
-    <string name="recharge_coins_balance">萌币余额：</string>
-    <string name="recharge_mode">充值方式：</string>
-    <string name="recharge_alipay">支付宝支付</string>
-    <string name="recharge_wechat_pay">微信支付</string>
-    <string name="recharge_money">充值金额：</string>
-    <string name="recharge_hint">充值到账有一定时间延迟，请耐心等待，如长时间未到账，请联系客服QQ：</string>
+
     <!--金山云直播-->
     <string name="text_resolution">请选择合适的分辨率:</string>
     <string name="text_orientation">请选择显示方式:</string>
@@ -178,5 +151,27 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="live_house_chat_edit_text_hint">和大家聊聊天吧！</string>
+    <string name="gift_count_custom">自定义数量</string>
+    <string name="confirm">确定</string>
+    <string name="gift_custom_hint">请输入赠送数量 最多9999</string>
+
+    <array name="gift_count_select">
+        <item>1314</item>
+        <item>520</item>
+        <item>188</item>
+        <item>99</item>
+        <item>66</item>
+        <item>1</item>
+    </array>
+
+    <array name="gift_count_desc_select">
+        <item>一生一世</item>
+        <item>我爱你</item>
+        <item>要抱抱</item>
+        <item>长长久久</item>
+        <item>一切顺利</item>
+        <item>一心一意</item>
+    </array>
 
 </resources>
