登录逻辑完成,主页修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,5 +215,8 @@
     <string name="phone_number_hint">请输入您的手机号码</string>
     <string name="password_hint">请输入密码</string>
     <string name="nothing" />
+    <string name="follow_title">关注</string>
+    <string name="me_title">我的</string>
+    <string name="login_success">登录成功</string>
 
 </resources>
