--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,5 +218,6 @@
     <string name="follow_title">关注</string>
     <string name="me_title">我的</string>
     <string name="login_success">登录成功</string>
+    <string name="load_more_end"><![CDATA[ 别拖了     到底了]]></string>
 
 </resources>
