--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,5 +235,8 @@
     <string name="permission_storage_denid">存储权限被禁止,部分功能可能无法正常工作.</string>
     <string name="permission_camera_denid">相机权限被禁止,部分功能可能无法正常工作.</string>
     <string name="permission_denid">存储或相机权限被禁止,部分功能可能无法正常工作.</string>
+    <string name="register_btn">同意协议并注册</string>
+    <string name="verify_code_hint">请输入验证码</string>
+    <string name="get_verify_code">获取验证码</string>
 
 </resources>
