--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,9 +90,9 @@
     <string name="user_feed_back_submit">提交</string>
     <!--客服中心-->
     <string name="user_custom_fficial_service">官方客服</string>
-    <string name="user_custom_fficial_service_qq">QQ:</string>
+    <string name="user_custom_fficial_service_qq">QQ：3179747001</string>
     <string name="user_custom_guild_entered">公会入驻</string>
-    <string name="user_custom_guild_entered_qq">QQ:</string>
+    <string name="user_custom_guild_entered_qq">QQ：1530675255</string>
     <!--充值-->
     <string name="recharge_account_number">充值账号：</string>
     <string name="recharge_coins_balance">萌币余额：</string>
@@ -238,5 +238,9 @@
     <string name="register_btn">同意协议并注册</string>
     <string name="verify_code_hint">请输入验证码</string>
     <string name="get_verify_code">获取验证码</string>
+    <string name="upgrade">立即更新</string>
+    <string name="login_out">退出登录</string>
+    <string name="about_us">关于我们</string>
+    <string name="custom">客服中心</string>
 
 </resources>
