--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="recharge_ali_pay">支付宝支付</string>
     <string name="recharge_we_chat_pay">微信支付</string>
     <string name="recharge_money">充值金额：</string>
-    <string name="recharge_hint">充值到账有一定时间延迟，请耐心等待，如长时间未到账，\n请联系客服QQ：</string>
+    <string name="recharge_hint">充值到账有一定时间延迟，请耐心等待，如长时间未到账，\n请联系客服QQ：3179747001</string>
     <!--金山云直播-->
     <string name="text_resolution">请选择合适的分辨率:</string>
     <string name="text_orientation">请选择显示方式:</string>
@@ -247,7 +247,7 @@
     <string name="gender">性别</string>
     <string name="empty_backpack">你的背包是空的</string>
     <string name="empty_guard_list">当前主播还没有守护用户\n快给心爱的主播开一个吧</string>
-    <string name="guard_priority">1.尊贵标识\n2.排位靠前\n3.尊贵坐席\n4.与主播用户私聊</string>
+    <string name="guard_priority">1.尊贵标识\n2.排位靠前\n3.尊贵坐席\n4.私聊\n5.防禁言\n6.聊天文字\n7.守护专属表情\n8.守护专属礼物\n9.守护进场特效</string>
     <string name="feedback">意见反馈</string>
 
 </resources>
