--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,5 +249,14 @@
     <string name="empty_guard_list">当前主播还没有守护用户\n快给心爱的主播开一个吧</string>
     <string name="guard_priority">1.尊贵标识\n2.排位靠前\n3.尊贵坐席\n4.私聊\n5.防禁言\n6.聊天文字\n7.守护专属表情\n8.守护专属礼物\n9.守护进场特效</string>
     <string name="feedback">意见反馈</string>
+    <string name="subscriptions">粉丝%1$s</string>
+    <string name="audience">人气\n%1$d</string>
+    <string name="alert">提示</string>
+    <string name="cancel">取消</string>
+    <string name="net_error">网络连接断开，请检测网络设置</string>
+    <string name="private_chat_permission_deny">当前用户没有私聊权限</string>
+    <string name="kick_out_message">你已经被踢出踢出直播间</string>
+    <string name="force_kick_out_message">用多个手机打开同一个直播间，强制退出之前的直播间</string>
+    <string name="jump_live_house">是否离开当前直播间\n跳转到%1$s直播间</string>
 
 </resources>
