--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -286,4 +286,5 @@
     <string name="treasure_box_tip">在线时间越长，开到宝箱越高级</string>
     <string name="two">%1$02d:%2$02d</string>
     <string name="goodnum">价格：%1$d萌币</string>
+    <string name="search_room">房间号：%1$d</string>
 </resources>
