--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -287,4 +287,5 @@
     <string name="two">%1$02d:%2$02d</string>
     <string name="goodnum">价格：%1$d萌币</string>
     <string name="search_room">房间号：%1$d</string>
+    <string name="pk_time">%1$02d:%2$02d</string>
 </resources>
