--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,7 +270,7 @@
     <string name="nick_name">昵称</string>
     <string name="save">保存</string>
     <string name="gender">性别</string>
-    <string name="empty_backpack">你的背包是空的</string>
+    <string name="empty_backpack">你的背包空空如也！</string>
     <string name="empty_guard_list">当前主播还没有守护用户\n快给心爱的主播开一个吧</string>
     <string name="guard_priority">1.尊贵标识\n2.排位靠前\n3.尊贵坐席\n4.私聊\n5.防禁言\n6.聊天文字\n7.守护专属表情\n8.守护专属礼物\n9.守护进场特效</string>
     <string name="feedback">意见反馈</string>
