--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -275,7 +275,7 @@
     <string name="guard_priority">1.尊贵标识\n2.排位靠前\n3.尊贵坐席\n4.私聊\n5.防禁言\n6.聊天文字\n7.守护专属表情\n8.守护专属礼物\n9.守护进场特效</string>
     <string name="feedback">意见反馈</string>
     <string name="subscriptions">粉丝%1$s</string>
-    <string name="audience">人气\n%1$d</string>
+    <string name="audience">在线\n%1$d</string>
     <string name="alert">提示</string>
     <string name="cancel">取消</string>
     <string name="net_error">网络连接断开，请检测网络设置</string>
