--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -314,6 +314,17 @@
     <string name="share_card_title">通过以下方式分享</string>
     <string name="share_outside_title">我正在偷偷观看%1$s的直播！</string>
     <string name="share_outside_decs">%1$s正在性感热舞中，快去瞧瞧吧！</string>
+    <string name="at">Ta</string>
+
+    <string name="basic_info">基本信息</string>
+    <string name="page_nick_name">昵&#12288;&#12288;称:</string>
+    <string name="meng_num">萌&#12288;&#12288;号:</string>
+    <string name="copy_good_num">复制萌号</string>
+    <string name="address_age">地区年龄:</string>
+    <string name="anchor_level">主播等级:</string>
+    <string name="user_level">富豪等级:</string>
+    <string name="royal_level">贵族等级:</string>
+    <string name="medal_wall">勋章墙</string>
 
     <array name="new_task">
         <item>领取</item>
