--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -350,6 +350,12 @@
     <string name="cancel_global_mute">解除全局禁言</string>
     <string name="cancel_room_manager">解除房管</string>
 
+    <string name="tip_off_1">政治违规</string>
+    <string name="tip_off_2">低俗色情</string>
+    <string name="tip_off_3">言语谩骂</string>
+    <string name="tip_off_4">广告骚扰</string>
+    <string name="tip_off_5">外站拉人</string>
+
     <array name="new_task">
         <item>领取</item>
         <item>改昵称</item>
