--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,7 +240,7 @@
     <string name="password_hint">请输入密码</string>
     <string name="nothing" />
     <string name="rank_title">榜单</string>
-    <string name="follow_title">关注</string>
+    <string name="follow_title">订阅</string>
     <string name="me_title">我的</string>
     <string name="login_success">登录成功</string>
     <string name="load_more_end"><![CDATA[ 别拖了     到底啦]]></string>
