--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -333,9 +333,9 @@
     <string name="followed">已关注</string>
 
     <string name="user_rank">%1$d\n富豪排行</string>
-    <string name="anchor_rank">%1$d\n主播排行</string>
-    <string name="user_rank_out">%1$s\n富豪排行</string>
-    <string name="anchor_rank_out">%1$s\n主播排行</string>
+    <string name="anchor_rank">%1$d\n主播排名</string>
+    <string name="user_rank_out">%1$s\n富豪排名</string>
+    <string name="anchor_rank_out">%1$s\n主播排名</string>
     <string name="fans_count">%1$d\n粉丝</string>
     <string name="follow">%1$d\n关注</string>
     <string name="live">直播中</string>
