--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -386,5 +386,6 @@
         <item>幸运转盘抽奖1次</item>
     </array>
 
-
+    <string name="gift_dialog_super_run">可以登上超跑一次，还差%1$d萌币才能攻占当前超跑</string>
+    <string name="edit_hint_gift_dialog_super_run">陪你哭，陪你笑，此生只为和你闹</string>
 </resources>
