--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -368,6 +368,8 @@
     <string name="rich_top_award_2">星光达人勋章 7 天、VIP 30 天</string>
     <string name="award">奖励发放</string>
     <string name="award_info">活动结束后系统自动发放</string>
+    <string name="countdown">本轮剩余时间&#160;%1$s</string>
+    <string name="beyond_first">超越第1名需要&#160;%1$s&#160;魅力</string>
 
     <array name="new_task">
         <item>领取</item>
