--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -370,6 +370,7 @@
     <string name="award_info">活动结束后系统自动发放</string>
     <string name="countdown">本轮剩余时间&#160;%1$s</string>
     <string name="beyond_first">超越第1名需要&#160;%1$s&#160;魅力</string>
+    <string name="headline_rank">第%1$d名</string>
 
     <array name="new_task">
         <item>领取</item>
