--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -409,5 +409,8 @@
         <item>守护</item>
         <item>设置</item>
         <item>客服</item>
+        <item>PK战绩</item>
     </array>
+
+    <string name="history_record">最近%1$d条记录</string>
 </resources>
