--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -374,6 +374,7 @@
     <string name="need_goods">您需要赠送&#160;%1$d&#160;个%2$s</string>
     <string name="need_mengbi">花费&#160;%1$s&#160;萌币，才能超越第1名</string>
     <string name="quit_app">您确定要关闭萌比直播APP吗？</string>
+    <string name="top_rank">当前主播已是第1名，请继续保持！</string>
 
     <array name="new_task">
         <item>领取</item>
