--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -418,4 +418,7 @@
 
     <string name="history_record">最近%1$d条记录</string>
     <string name="guard_follow_days">剩余%1$d天</string>
+
+    <string name="play_notify_off">开播通知已关闭，开启后可收到主播的开播提醒</string>
+    <string name="play_notify_on">已订阅主播列表</string>
 </resources>
