--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -381,6 +381,8 @@
 
     <string name="delete_search_history">确定要清除搜索记录吗?</string>
 
+    <string name="chip_count">%1$d/%2$d</string>
+
     <array name="new_task">
         <item>领取</item>
         <item>改昵称</item>
