--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="home_title">首页</string>
     <string name="home_recommend">首页</string>
     <string name="home_">首页</string>
+    <string name="live_title">直播</string>
 
     <!--直播间-->
     <string name="live_display_anchornickname">主播昵称</string>
@@ -241,6 +242,8 @@
     <string name="nothing" />
     <string name="rank_title">榜单</string>
     <string name="follow_title">订阅</string>
+    <string name="message_title">消息</string>
+    <string name="find_title">发现</string>
     <string name="me_title">我的</string>
     <string name="login_success">登录成功</string>
     <string name="load_more_end"><![CDATA[ 别拖了     到底啦]]></string>
