--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,12 +246,12 @@
     <string name="find_title">发现</string>
     <string name="me_title">我的</string>
     <string name="login_success">登录成功</string>
-    <string name="load_more_end"><![CDATA[ 别拖了     到底啦]]></string>
+    <string name="load_more_end"><![CDATA[没有更多了～]]></string>
     <string name="personal">个人中心</string>
     <string name="recharge_type">充值方式</string>
-    <string name="recharge_amount">充值金额</string>
+    <string name="recharge_amount">请选择充值金额</string>
     <string name="recharge_tip">请先选择充值金额</string>
-    <string name="recharge_confirm">确认支付 ¥%1$.2f</string>
+    <string name="recharge_confirm">确认支付 %1$.0f元</string>
     <string name="recharge_account">充值账号：%1$s</string>
     <string name="mengbi_left">萌币余额：</string>
     <string name="pay_success">支付成功</string>
