--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -449,5 +449,7 @@
     <string name="mine_composite">碎片合成</string>
     <string name="mine_guard">我守护/管理的主播</string>
     <string name="mine_bill">我的账单</string>
+    <string name="my_assets">我的资产</string>
+    <string name="my_income">我的收益</string>
 
 </resources>
