--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -436,6 +436,7 @@
     <string name="red_pack_full">本房间红包个数超过5个，不能再发送，请稍后再发</string>
     <string name="red_pack_unplay">直播间未开播</string>
     <string name="red_pack_money_unfull">余额不足</string>
+    <string name="welfare_item_prop_shop">额外赠送%1$d萌豆/个</string>
 
     <!-- 我的 -->
     <string name="mine_wallet">我的钱包</string>
