--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -446,7 +446,7 @@
     <string name="mine_vip">我的VIP</string>
     <string name="mine_pretty">我的靓号</string>
     <string name="mine_car">我的座驾</string>
-    <string name="mine_coupon">我的优惠券</string>
+    <string name="mine_coupon">我的返利券</string>
     <string name="mine_composite">碎片合成</string>
     <string name="mine_guard">我守护/管理的主播</string>
     <string name="mine_bill">我的账单</string>
