anchor wish change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -464,4 +464,7 @@
     <string name="rank_tip_anchor1">昨日榜奖励：第1名，奖励开播全局提醒\n上周榜奖励：第1~10名，奖励人气勋章7天\n上月榜奖励：第1~3名，分别奖励萌币30万、15万、5万</string>
     <string name="rank_tip_anchor2">蓝色妖姬通过每日在线任务和转盘抽奖获得</string>
 
+    <!-- 隐私政策 -->
+    <string name="privacy">您在使用萌比直播产品和服务前，请认真阅读并充分理解相关法律条款、平台规则及隐私政策（可在设置>关于萌比>服务协议中查找并阅读）。当您点击同意，并开始使用产品或服务，即表示您已理解并同意该条款，我们可能会收集您的身份信息、交易信息、位置信息、设备信息等，我们会尽全力保护您的个人信息安全。</string>
+
 </resources>
