--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,7 +270,7 @@
     <string name="get_verify_code">获取验证码</string>
     <string name="upgrade">立即更新</string>
     <string name="login_out">退出登录</string>
-    <string name="about_us">关于我们</string>
+    <string name="about_us">关于萌比</string>
     <string name="custom">官方客服</string>
     <string name="nick_name">编辑昵称</string>
     <string name="save">保存</string>
