--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,9 +84,10 @@
     <!--设置-->
     <string name="user_settings_feed_back">意见反馈</string>
     <string name="user_settings_custom_service">官方客服</string>
-    <string name="user_settings_about">关于我们</string>
+    <string name="user_settings_about">关于萌比</string>
     <string name="user_settings_version_update">版本更新</string>
     <string name="user_settings_exit_login">退出登录</string>
+    <string name="user_settings_push">消息推送</string>
     <!--意见反馈-->
     <string name="user_feed_back_content">想要新功能？使用不方便？这里吐槽吧！</string>
     <string name="user_feed_back_qq">联系QQ</string>
@@ -268,7 +269,7 @@
     <string name="register_btn">同意协议并注册</string>
     <string name="verify_code_hint">请输入验证码</string>
     <string name="get_verify_code">获取验证码</string>
-    <string name="upgrade">立即更新</string>
+    <string name="upgrade">软件升级</string>
     <string name="login_out">退出登录</string>
     <string name="about_us">关于萌比</string>
     <string name="custom">官方客服</string>
