--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -357,6 +357,7 @@
     <string name="cancel_mute">解除禁言</string>
     <string name="cancel_global_mute">解除全局禁言</string>
     <string name="cancel_room_manager">解除房管</string>
+    <string name="offline">一键下线</string>
 
     <string name="tip_off_1">政治违规</string>
     <string name="tip_off_2">低俗色情</string>
