--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
     <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <!--登录 -->
     <string name="user_longin_textview">登录</string>
     <string name="user_register_textview">注册</string>
@@ -149,7 +148,6 @@
     <string name="ksyun_introduction_3">金山云推流SDK支持H.264/H.265编码、软硬编，支持多种美颜滤镜特效、连麦，音频模块也在不断强化：美声、升降调、变声、混音等，弱网优化模块也颇有建树：码率自适应、网络主动探测、动态帧率等。</string>
     <string name="ksyun_introduction_4">金山云播放SDK通过首屏秒开、直播追赶等直播优化策略给直播提供一流的直播体验。</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="net_search">查找视频信息</string>
 
     <string name="set_setting">设置</string>
@@ -472,5 +470,5 @@
 
     <!-- 隐私政策 -->
     <string name="privacy">您在使用萌比直播产品和服务前，请认真阅读并充分理解相关法律条款、平台规则及隐私政策（可在设置>关于萌比>服务协议中查找并阅读）。当您点击同意，并开始使用产品或服务，即表示您已理解并同意该条款，我们可能会收集您的身份信息、交易信息、位置信息、设备信息等，我们会尽全力保护您的个人信息安全。</string>
-
+    <string name="again_code">重新获取%1$ds</string>
 </resources>
