--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -430,6 +430,7 @@
         <item>福利</item>
         <item>战绩</item>
         <item>守护</item>
+        <item>动效</item>
         <item>设置</item>
         <item>客服</item>
     </array>
