--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -479,4 +479,7 @@
     <string name="tv_odd_guess">赔率 %1$.2f</string>
 
     <string name="snatch_tips">输入夺宝次数进行夺宝，满足开奖条件后会从本期夺宝用户中选中一位用户独得本轮奖励。</string>
+
+    <string name="empty_expiration_msg">暂无系统通知</string>
+    <string name="empty_system_msg">暂无官方通知</string>
 </resources>
